--- a/Orderly.Client/Pages/Shared/DashboardLayout.razor
+++ b/Orderly.Client/Pages/Shared/DashboardLayout.razor
@@ -105,7 +105,7 @@
             Body
         *@
 
-        <div class="p-3 sm:p-4">
+        <div>
             @Body
         </div>
     </main>
@@ -158,7 +158,7 @@
     {
         get
         {
-            return $"flex-1 transition-all duration-300 {(IsDesktop ? "ml-64" : "")} p-3 sm:p-4 lg:p-8 bg-lightbg dark:bg-darkbg";
+            return $"flex-1 transition-all duration-300 {(IsDesktop ? "ml-64" : "")} bg-lightbg dark:bg-darkbg";
         }
     }
 
